<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/search_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="8dp">
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center_vertical"
        android:id="@+id/search_badge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:drawablePadding="0dp"/>
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/search_button"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/abc_searchview_description_search"
        style="?attr/actionButtonStyle"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/search_edit_frame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layoutDirection="locale">
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/search_mag_icon"
            android:visibility="visible"
            android:layout_width="@dimen/abc_dropdownitem_icon_width"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:contentDescription="TODO"
            style="@style/RtlOverlay.Widget.AppCompat.SearchView.MagIcon"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/search_plate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <view
                android:textSize="20sp"
                android:textColor="#1f2527"
                android:textColorHint="@color/material_light_hint_text"
                android:ellipsize="end"
                android:layout_gravity="center_vertical"
                android:id="@+id/search_src_text"
                android:background="@null"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:layout_weight="1"
                android:inputType="textNoSuggestions"
                android:dropDownAnchor="@+id/anchor_dropdown"
                android:imeOptions="actionSearch"
                android:dropDownHeight="wrap_content"
                android:dropDownHorizontalOffset="0dp"
                android:dropDownVerticalOffset="0dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                class="androidx.appcompat.widget.SearchView$SearchAutoComplete"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/search_close_btn"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/abc_searchview_description_clear"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/submit_area"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/search_go_btn"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/abc_searchview_description_submit"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/search_voice_btn"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/abc_searchview_description_voice"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
