<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <com.google.android.material.appbar.AppBarLayout
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/tabanim_appbar"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/toolbar"
                android:background="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:elevation="0dp"
                app:layout_scrollFlags="snap|enterAlways|scroll">
                <ImageButton
                    android:id="@+id/btnSearch"
                    android:background="@null"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/ic_search"/>
                <TextView
                    android:textSize="18dp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical"
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>
                <EditText
                    android:textSize="18dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/etSearch"
                    android:background="@null"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/search_title"
                    android:maxLines="1"
                    android:lines="1"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:imeOptions="actionSearch"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>
                <ImageButton
                    android:id="@+id/btnClear"
                    android:background="@null"
                    android:visibility="gone"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/ic_close"/>
                <ImageButton
                    android:id="@+id/btnSpeak"
                    android:background="@null"
                    android:visibility="gone"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/ic_mic"/>
                <ImageButton
                    android:id="@+id/btnRefresh"
                    android:background="@null"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:contentDescription="TODO"
                    app:srcCompat="@drawable/ic_refresh"/>
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <FrameLayout
            android:id="@+id/frame"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <include layout="@layout/view_bottom_bar"/>
    </LinearLayout>
</LinearLayout>
